--- a/settings.ini
+++ b/settings.ini
@@ -4,7 +4,6 @@ FRAMERATE = 30
 STREAMS = color, depth, infrared
 OUTPUT_DIRECTORY = /home/agschwarz/Output
 MULTIPLE_DEVICES = False
-STACK_FRAMES = False
 VIDEO_SOURCE = 2
 
 [DeepLabCut]
@@ -13,4 +12,4 @@ MODEL = openfield_testset2Nov07-trainset95shuffle1
 
 [Experiment]
 EXP_NUMBER = 1
-RECORD_EXP = Truerm
+RECORD_EXP = True
