--- a/settings.ini
+++ b/settings.ini
@@ -2,13 +2,13 @@
 RESOLUTION = 848, 480
 FRAMERATE = 30
 STREAMS = color, depth, infrared
-OUTPUT_DIRECTORY = E:\Output
+OUTPUT_DIRECTORY = /home/agschwarz/Output
 MULTIPLE_DEVICES = False
 VIDEO_SOURCE = 2
 
 [DeepLabCut]
-DLC_PATH = D:\DeepLabCut\DeepLabCut-master\deeplabcut
-MODEL = Optogen_Net0509-trainset95shuffle1
+DLC_PATH = /home/agschwarz/DeepLabCut/deeplabcut
+MODEL = openfield_testset2Nov07-trainset95shuffle1
 
 [Experiment]
 EXP_NUMBER = 1
