Preparation for VideoAnalyser

--- a/settings.ini
+++ b/settings.ini
@@ -3,8 +3,8 @@ RESOLUTION = 848, 480
 FRAMERATE = 30
 STREAMS = color, depth, infrared
 OUTPUT_DIRECTORY = /home/agschwarz/Output
-MULTIPLE_DEVICES = False
-VIDEO_SOURCE = 2
+MULTIPLE_DEVICES = True
+CAMERA_SOURCE = 2
 
 [DeepLabCut]
 DLC_PATH = /home/agschwarz/DeepLabCut/deeplabcut
