VideoAnalyser first draft

--- a/settings.ini
+++ b/settings.ini
@@ -13,3 +13,6 @@ MODEL = openfield_testset2Nov07-trainset95shuffle1
 [Experiment]
 EXP_NUMBER = 1
 RECORD_EXP = True
+
+[Video]
+VIDEO_SOURCE = /home/agschwarz/Output/ExperimentD1_G2_37-16092019-141541.avi
