Readme new known issue

--- a/settings.ini
+++ b/settings.ini
@@ -2,18 +2,17 @@
 RESOLUTION = 848, 480
 FRAMERATE = 30
 STREAMS = color, depth, infrared
-OUTPUT_DIRECTORY = E:\Output
-MULTIPLE_DEVICES = False
-VIDEO_SOURCE = 2
-ANIMALS_NUMBER = 1
+OUTPUT_DIRECTORY = /home/agschwarz/Output
+MULTIPLE_DEVICES = True
+CAMERA_SOURCE = 2
 
 [DeepLabCut]
-DLC_PATH = D:\DeepLabCut\DeepLabCut-master\deeplabcut
-MODEL = 13PointsFeb3-trainset95shuffle1
+DLC_PATH = /home/agschwarz/DeepLabCut/deeplabcut
+MODEL = openfield_testset2Nov07-trainset95shuffle1
 
 [Experiment]
 EXP_NUMBER = 1
 RECORD_EXP = True
 
 [Video]
-VIDEO_SOURCE = E:\Output\DeepLabCutVideos\ExperimentD1_G2_37-16092019-141541.avi
+VIDEO_SOURCE = /home/agschwarz/Output/ExperimentD1_G2_37-16092019-141541.avi
