--- a/settings.ini
+++ b/settings.ini
@@ -2,17 +2,17 @@
 RESOLUTION = 848, 480
 FRAMERATE = 30
 STREAMS = color, depth, infrared
-OUTPUT_DIRECTORY = /home/agschwarz/Output
-MULTIPLE_DEVICES = True
+OUTPUT_DIRECTORY = /Output
+MULTIPLE_DEVICES = False
 CAMERA_SOURCE = 2
 
 [DeepLabCut]
-DLC_PATH = /home/agschwarz/DeepLabCut/deeplabcut
-MODEL = openfield_testset2Nov07-trainset95shuffle1
+DLC_PATH = /DeepLabCut/deeplabcut
+MODEL = Your_network_name
 
 [Experiment]
 EXP_NUMBER = 1
 RECORD_EXP = True
 
 [Video]
-VIDEO_SOURCE = /home/agschwarz/Output/ExperimentD1_G2_37-16092019-141541.avi
+VIDEO_SOURCE = /Offline_Test_video.avi
