Integration of offline video to full DLStream

--- a/settings.ini
+++ b/settings.ini
@@ -1,18 +1,19 @@
 [Streaming]
-RESOLUTION = 848, 480
-FRAMERATE = 30
+RESOLUTION = 320, 256
+FRAMERATE = 169
 STREAMS = color, depth, infrared
 OUTPUT_DIRECTORY = /Output
 MULTIPLE_DEVICES = False
 CAMERA_SOURCE = 2
 
 [DeepLabCut]
-DLC_PATH = /DeepLabCut/deeplabcut
-MODEL = Your_network_name
+DLC_PATH = D:\maDeepLabCut\deeplabcut
+MODEL = 13PointsFeb3-trainset95shuffle1_MobileNetV2
 
 [Experiment]
 EXP_NUMBER = 1
 RECORD_EXP = True
 
 [Video]
-VIDEO_SOURCE = /Offline_Test_video.avi
+VIDEO_SOURCE = PATH_TO_PRERECORDED_VIDEO
+VIDEO = False
