Updated Experiment selection

--- a/settings.ini
+++ b/settings.ini
@@ -7,11 +7,11 @@ MULTIPLE_DEVICES = False
 CAMERA_SOURCE = 2
 
 [DeepLabCut]
-DLC_PATH = D:\maDeepLabCut\deeplabcut
-MODEL = 13PointsFeb3-trainset95shuffle1_MobileNetV2
+DLC_PATH = PATH_TO_DLC
+MODEL = MODEL_NAME
 
 [Experiment]
-EXP_NUMBER = 1
+EXP_NAME = ExampleExperiment
 RECORD_EXP = True
 
 [Video]
