--- a/experiments/experiment_config.ini
+++ b/experiments/experiment_config.ini
@@ -2,15 +2,10 @@
 
 [ExampleExperiment]
 
-GREEN_POINT = (550, 63)
-BLUE_POINT = (372, 63)
-
+POINT_1 = (550, 63)
+POINT_2 = (372, 63)
+BODYPART = neck
 INTERTRIAL_TIME = 40
-PENALTY_TIME = 5
-POINT = (678, 226)
-ANGLE_WINDOW = (-30, 30)
-
-CTRL = False
 TRIAL_TIME = 10
 EXP_LENGTH = 40
 EXP_TIME = 3600
