setting up standard experiments and ini import

--- a/experiments/experiment_config.ini
+++ b/experiments/experiment_config.ini
@@ -1,12 +1,37 @@
-
-
-[ExampleExperiment]
-
-POINT_1 = (550, 63)
-POINT_2 = (372, 63)
-BODYPART = neck
+[StandardExperiment]
+TRIGGER = StandardRegionTrigger
 INTERTRIAL_TIME = 40
 TRIAL_TIME = 10
 EXP_LENGTH = 40
 EXP_TIME = 3600
 EXP_COMPLETION = 10
+
+
+[StandardOptogeneticExperiment]
+TRIGGER = StandardRegionTrigger
+INTERTRIAL_TIME = 40
+MAX_STIM_TIME = 10
+MIN_STIM_TIME = 3
+MAX_TOTAL_STIM_TIME = 500
+EXP_LENGTH = 40
+EXP_TIME = 3600
+EXP_COMPLETION = 10
+
+
+[StandardRegionTrigger]
+TYPE = circle
+CENTER= (550, 63)
+RADIUS = 30
+BODYPARTS = neck
+DEBUG = False
+
+[StandardHeaddirectionTrigger]
+POINT= (550, 63)
+ANLGE = 30
+BODYPARTS = neck
+DEBUG = False
+
+[StandardSpeedTrigger]
+THRESHOLD = 2.6
+BODYPARTS = any
+DEBUG = False
