--- a/experiments/experiment_config.ini
+++ b/experiments/experiment_config.ini
@@ -1,5 +1,7 @@
 [StandardExampleExperiment]
 TRIGGER = StandardRegionTrigger
+PROCESS_TYPE = condition
+STIMULATION =  laser
 INTERTRIAL_TIME = 40
 TRIAL_TIME = 10
 EXP_LENGTH = 40
