--- a/experiments/experiment_config.ini
+++ b/experiments/experiment_config.ini
@@ -9,6 +9,14 @@ EXP_TIME = 3600
 EXP_COMPLETION = 10
 
 
+[StandardConditionalExperiment]
+TRIGGER = StandardRegionTrigger
+STIMULATION =  laser
+INTERTRIAL_TIME = 40
+EXP_LENGTH = 40
+EXP_TIME = 3600
+EXP_COMPLETION = 10
+
 [StandardOptogeneticExperiment]
 TRIGGER = StandardRegionTrigger
 INTERTRIAL_TIME = 40
