--- a/experiments/experiment_config.ini
+++ b/experiments/experiment_config.ini
@@ -1,3 +1,6 @@
+
+[EXPERIMENTS]
+
 [StandardExampleExperiment]
 TRIGGER = StandardRegionTrigger
 PROCESS_TYPE = condition
@@ -7,7 +10,6 @@ TRIAL_TIME = 10
 EXP_LENGTH = 40
 EXP_TIME = 3600
 EXP_COMPLETION = 10
-
 
 [StandardConditionalExperiment]
 TRIGGER = StandardRegionTrigger
@@ -28,6 +30,8 @@ EXP_TIME = 3600
 EXP_COMPLETION = 10
 
 
+[TRIGGER]
+
 [StandardRegionTrigger]
 TYPE = circle
 CENTER= (550, 63)
@@ -45,3 +49,25 @@ DEBUG = False
 THRESHOLD = 2.6
 BODYPARTS = any
 DEBUG = False
+
+
+[STIMULATION]
+
+[StandardStimulation]
+TYPE = NI
+PORT = Dev1/PFI6
+STIM_TIME = 3.5
+
+[RewardDispenser]
+TYPE = NI
+STIM_PORT = Dev1/PFI6
+REMOVAL_PORT = Dev1/PFI5
+STIM_TIME = 3.5
+REMOVAL_TIME = 3.5
+
+[ScreenStimulation]
+TYPE = image
+STIM_PATH = PATH_TO_IMAGE
+BACKGROUND_PATH = PATH_TO_BACKGROUND
+
+
