--- a/experiments/experiment_config.ini
+++ b/experiments/experiment_config.ini
@@ -1,7 +1,7 @@
 
 [EXPERIMENTS]
 
-[StandardExampleExperiment]
+[BaseExampleExperiment]
 TRIGGER = StandardRegionTrigger
 PROCESS_TYPE = condition
 STIMULATION =  laser
@@ -11,7 +11,7 @@ EXP_LENGTH = 40
 EXP_TIME = 3600
 EXP_COMPLETION = 10
 
-[StandardConditionalExperiment]
+[BaseConditionalExperiment]
 TRIGGER = StandardRegionTrigger
 STIMULATION =  laser
 INTERTRIAL_TIME = 40
@@ -19,7 +19,7 @@ EXP_LENGTH = 40
 EXP_TIME = 3600
 EXP_COMPLETION = 10
 
-[StandardOptogeneticExperiment]
+[BaseOptogeneticExperiment]
 TRIGGER = StandardRegionTrigger
 INTERTRIAL_TIME = 40
 MAX_STIM_TIME = 10
@@ -53,7 +53,7 @@ DEBUG = False
 
 [STIMULATION]
 
-[StandardStimulation]
+[BaseStimulation]
 TYPE = NI
 PORT = Dev1/PFI6
 STIM_TIME = 3.5
