relocated several functions and scripts added config file functionality

--- a/experiments/configs/base_config.ini
+++ b/experiments/configs/base_config.ini
@@ -1,9 +1,8 @@
-
 [EXPERIMENTS]
 
 [BaseExampleExperiment]
-TRIGGER = StandardRegionTrigger
-PROCESS_TYPE = condition
+TRIGGER = BaseRegionTrigger
+PROCESS_TYPE = switch
 STIMULATION =  laser
 INTERTRIAL_TIME = 40
 TRIAL_TIME = 10
@@ -12,7 +11,7 @@ EXP_TIME = 3600
 EXP_COMPLETION = 10
 
 [BaseConditionalExperiment]
-TRIGGER = StandardRegionTrigger
+TRIGGER = BaseRegionTrigger
 STIMULATION =  laser
 INTERTRIAL_TIME = 40
 EXP_LENGTH = 40
@@ -20,7 +19,7 @@ EXP_TIME = 3600
 EXP_COMPLETION = 10
 
 [BaseOptogeneticExperiment]
-TRIGGER = StandardRegionTrigger
+TRIGGER = BaseRegionTrigger
 INTERTRIAL_TIME = 40
 MAX_STIM_TIME = 10
 MIN_STIM_TIME = 3
@@ -32,20 +31,20 @@ EXP_COMPLETION = 10
 
 [TRIGGER]
 
-[StandardRegionTrigger]
+[BaseRegionTrigger]
 TYPE = circle
 CENTER= (550, 63)
 RADIUS = 30
 BODYPARTS = neck
 DEBUG = False
 
-[StandardHeaddirectionTrigger]
+[BaseHeaddirectionTrigger]
 POINT= (550, 63)
 ANLGE = 30
 BODYPARTS = neck
 DEBUG = False
 
-[StandardSpeedTrigger]
+[BaseSpeedTrigger]
 THRESHOLD = 2.6
 BODYPARTS = any
 DEBUG = False
