updated process import

--- a/experiments/configs/base_config.ini
+++ b/experiments/configs/base_config.ini
@@ -2,7 +2,7 @@
 
 [BaseExampleExperiment]
 TRIGGER = BaseRegionTrigger
-PROCESS_TYPE = switch
+PROCESS = BaseProtocolProcess
 STIMULATION =  laser
 INTERTRIAL_TIME = 40
 TRIAL_TIME = 10
@@ -68,5 +68,11 @@ REMOVAL_TIME = 3.5
 TYPE = image
 STIM_PATH = PATH_TO_IMAGE
 BACKGROUND_PATH = PATH_TO_BACKGROUND
+
+[ProtocolProcess]
+
+[BaseProtocolProcess]
+TYPE= switch
+STIMULATION = BaseStimulation
 
 
