--- a/experiments/configs/example_config.ini
+++ b/experiments/configs/example_config.ini
@@ -2,19 +2,21 @@
 
 EXPERIMENT = BaseConditionalExperiment
 TRIGGER = BaseRegionTrigger
-PROCESS_TYPE = switch
-STIMULATION =  BaseStimulation
+PROCESS = BaseProtocolProcess
 INTERTRIAL_TIME = 40
 TRIAL_TIME = 10
 EXP_LENGTH = 40
 EXP_TIME = 3600
 EXP_COMPLETION = 10
 
+[BaseProtocolProcess]
+TYPE= switch
+STIMULATION = BaseStimulation
+
 [BaseStimulation]
 TYPE = NI
 PORT = Dev1/PFI6
 STIM_TIME = None
-
 
 [BaseRegionTrigger]
 TYPE = circle
