fixed heritage and config

--- a/experiments/configs/base_config.ini
+++ b/experiments/configs/base_config.ini
@@ -12,7 +12,7 @@ EXP_COMPLETION = 10
 
 [BaseConditionalExperiment]
 TRIGGER = BaseRegionTrigger
-STIMULATION =  laser
+PROCESS = BaseProtocolProcess
 INTERTRIAL_TIME = 40
 EXP_LENGTH = 40
 EXP_TIME = 3600
