--- a/experiments/configs/default_config.ini
+++ b/experiments/configs/default_config.ini
@@ -1,4 +1,4 @@
-[EXPERIMENTS]
+;[EXPERIMENTS]
 
 [BaseExampleExperiment]
 TRIGGER = BaseRegionTrigger
@@ -29,17 +29,17 @@ EXP_TIME = 3600
 EXP_COMPLETION = 10
 
 
-[TRIGGER]
+;[TRIGGER]
 
 [BaseRegionTrigger]
 TYPE = circle
-CENTER= (550, 63)
+CENTER= 550, 63
 RADIUS = 30
 BODYPARTS = neck
 DEBUG = False
 
 [BaseHeaddirectionTrigger]
-POINT= (550, 63)
+POINT= 550, 63
 ANLGE = 30
 BODYPARTS = neck
 DEBUG = False
@@ -49,8 +49,14 @@ THRESHOLD = 2.6
 BODYPARTS = any
 DEBUG = False
 
+;[ProtocolProcess]
 
-[STIMULATION]
+[BaseProtocolProcess]
+TYPE= switch
+STIMULATION = BaseStimulation
+
+
+;[STIMULATION]
 
 [BaseStimulation]
 TYPE = NI
@@ -69,10 +75,5 @@ TYPE = image
 STIM_PATH = PATH_TO_IMAGE
 BACKGROUND_PATH = PATH_TO_BACKGROUND
 
-[ProtocolProcess]
-
-[BaseProtocolProcess]
-TYPE= switch
-STIMULATION = BaseStimulation
 
 
