minor license update in new scripts

--- a/experiments/configs/example_config.ini
+++ b/experiments/configs/example_config.ini
@@ -1,27 +1,26 @@
-[Experiment]
+[EXPERIMENT]
+BASE = BaseConditionalExperiment
+EXPERIMENTOR = DEFAULT
 
-EXPERIMENT = BaseConditionalExperiment
-TRIGGER = BaseRegionTrigger
+[BaseConditionalExperiment]
+TRIGGER = BaseHeaddirectionTrigger
 PROCESS = BaseProtocolProcess
 INTERTRIAL_TIME = 40
-TRIAL_TIME = 10
 EXP_LENGTH = 40
 EXP_TIME = 3600
 EXP_COMPLETION = 10
 
-[BaseProtocolProcess]
-TYPE= switch
-STIMULATION = BaseStimulation
-
-[BaseStimulation]
-TYPE = NI
-PORT = Dev1/PFI6
-STIM_TIME = None
-
-[BaseRegionTrigger]
-TYPE = circle
-CENTER= (550, 63)
-RADIUS = 30
+[BaseHeaddirectionTrigger]
+POINT = 550, 63
+ANLGE = 30
 BODYPARTS = neck
 DEBUG = False
 
+[BaseProtocolProcess]
+TYPE = switch
+STIMULATION = ScreenStimulation
+
+[ScreenStimulation]
+TYPE = image
+STIM_PATH = PATH_TO_IMAGE
+BACKGROUND_PATH = PATH_TO_BACKGROUND
