--- a/settings.ini
+++ b/settings.ini
@@ -1,17 +1,17 @@
 [Streaming]
 RESOLUTION = 320, 256
-FRAMERATE = 169
+FRAMERATE = 30
 STREAMS = color, depth, infrared
 OUTPUT_DIRECTORY = /Output
 MULTIPLE_DEVICES = False
 CAMERA_SOURCE = 2
 
 [DeepLabCut]
-DLC_PATH = PATH_TO_DLC
-MODEL = MODEL_NAME
+DLC_PATH = DLC_PATH
+MODEL = MODEL
 
 [Experiment]
-EXP_NAME = ExampleExperiment
+EXP_NAME = CONFIG_NAME
 RECORD_EXP = True
 
 [Video]
