updated base.triggers to include all previously published triggers

--- a/experiments/configs/default_config.ini
+++ b/experiments/configs/default_config.ini
@@ -39,13 +39,49 @@ RADIUS = 30
 BODYPARTS = neck
 DEBUG = False
 
-[BaseHeaddirectionTrigger]
-POINT= 550, 63
-ANGLE = 30
+[BaseOutsideRegionTrigger]
+TYPE = circle
+CENTER= 550, 63
+RADIUS = 30
 BODYPARTS = neck
 DEBUG = False
 
+[BaseHeaddirectionTrigger]
+POINT= 550, 63
+ANGLE = 30
+BODYPARTS = nose, neck
+DEBUG = False
+
+[BaseEgoHeaddirectionTrigger]
+ANGLE = 30
+HEADDIRECTION = both
+BODYPARTS = nose, neck, tailroot
+DEBUG = False
+
+[BaseScreenTrigger]
+ANGLE = 30
+DIRECTION = North
+BODYPARTS = nose, neck
+DEBUG = False
+
+[BaseHeaddirectionROITrigger]
+TYPE = circle
+CENTER= 550, 63
+RADIUS = 30
+ROI_BODYPARTS = neck
+DEBUG = False
+POINT= 550, 63
+ANGLE = 30
+ANGLE_BODYPARTS = nose, neck
+DEBUG = False
+
+
 [BaseSpeedTrigger]
+THRESHOLD = 2.6
+BODYPARTS = any
+DEBUG = False
+
+[BaseFreezeTrigger]
 THRESHOLD = 2.6
 BODYPARTS = any
 DEBUG = False
