--- a/experiments/configs/example_config.ini
+++ b/experiments/configs/example_config.ini
@@ -1,6 +1,6 @@
 [EXPERIMENT]
 BASE = BaseConditionalExperiment
-EXPERIMENTOR = DEFAULT
+EXPERIMENTER = DEFAULT
 
 [BaseConditionalExperiment]
 TRIGGER = BaseHeaddirectionTrigger
