updated new baseexperiment

--- a/experiments/configs/default_config.ini
+++ b/experiments/configs/default_config.ini
@@ -19,6 +19,21 @@ EXP_LENGTH = 40
 EXP_TIME = 3600
 EXP_COMPLETION = 10
 
+
+[BaseTrialExperiment]
+TRIGGER = BaseRegionTrigger
+PROCESS = BaseProtocolProcess
+INTERTRIAL_TIME = 40
+TRIAL_NAME = Trial
+TRIAL_TRIGGER = BaseRegionTrigger
+TRIAL_TIME = 10
+STIMULUS_TIME = 10
+RESULT_FUNC = any
+EXP_LENGTH = 40
+EXP_COMPLETION = 20
+EXP_TIME = 6000
+
+
 [BaseOptogeneticExperiment]
 TRIGGER = BaseRegionTrigger
 INTERTRIAL_TIME = 40
