updated BaseOptogeneticExperiment and config and design_experiment included Example configs for major experiment types

--- a/experiments/configs/BaseConditionalExperiment_example.ini
+++ b/experiments/configs/BaseConditionalExperiment_example.ini
@@ -1,26 +1,28 @@
 [EXPERIMENT]
 BASE = BaseConditionalExperiment
-EXPERIMENTER = DEFAULT
+EXPERIMENTER = Example
 
 [BaseConditionalExperiment]
-TRIGGER = BaseHeaddirectionTrigger
+TRIGGER = BaseRegionTrigger
 PROCESS = BaseProtocolProcess
 INTERTRIAL_TIME = 40
 EXP_LENGTH = 40
 EXP_TIME = 3600
 EXP_COMPLETION = 10
 
-[BaseHeaddirectionTrigger]
-POINT = 550, 63
-ANLGE = 30
+[BaseRegionTrigger]
+TYPE = circle
+CENTER = 550, 63
+RADIUS = 30
 BODYPARTS = neck
 DEBUG = False
 
 [BaseProtocolProcess]
 TYPE = switch
-STIMULATION = ScreenStimulation
+STIMULATION = BaseStimulation
 
-[ScreenStimulation]
-TYPE = image
-STIM_PATH = PATH_TO_IMAGE
-BACKGROUND_PATH = PATH_TO_BACKGROUND
+[BaseStimulation]
+TYPE = NI
+PORT = Dev1/PFI6
+STIM_TIME = 3.5
+
