--- a/experiments/configs/default_config.ini
+++ b/experiments/configs/default_config.ini
@@ -1,15 +1,5 @@
-;DO NOT REMOVE
+;DO NOT REMOVE FILE
 ;[EXPERIMENTS]
-
-[BaseExampleExperiment]
-TRIGGER = BaseRegionTrigger
-PROCESS = BaseProtocolProcess
-STIMULATION =  laser
-INTERTRIAL_TIME = 40
-TRIAL_TIME = 10
-EXP_LENGTH = 40
-EXP_TIME = 3600
-EXP_COMPLETION = 10
 
 [BaseConditionalExperiment]
 TRIGGER = BaseRegionTrigger
@@ -43,6 +33,8 @@ MAX_TOTAL_STIM_TIME = 500
 EXP_LENGTH = 40
 EXP_TIME = 3600
 EXP_COMPLETION = 10
+PROCESS = BaseProtocolProcess
+
 
 
 ;[TRIGGER]
@@ -88,7 +80,6 @@ DEBUG = False
 POINT= 550, 63
 ANGLE = 30
 ANGLE_BODYPARTS = nose, neck
-DEBUG = False
 
 
 [BaseSpeedTrigger]
