--- a/settings.ini
+++ b/settings.ini
@@ -4,17 +4,22 @@ FRAMERATE = 30
 STREAMS = color, depth, infrared
 OUTPUT_DIRECTORY = /Output
 MULTIPLE_DEVICES = False
-CAMERA_SOURCE = 2
+CAMERA_SOURCE = 0
 
 [DeepLabCut]
-DLC_PATH = DLC_PATH
-MODEL = MODEL
+DLC_PATH = D:\PycharmProjects\DeepLabCut\deeplabcut
+MODEL = Mouse_resident_intruder_HomeCage_CLAHE
 
 [Experiment]
-EXP_ORIGIN = BASE/CUSTOM
-EXP_NAME = CONFIG_NAME
+EXP_NAME = FirstExperiment
+EXP_ORIGIN = uguh
+;EXP_NAME = CONFIG_NAME
 RECORD_EXP = True
 
 [Video]
 VIDEO_SOURCE = PATH_TO_PRERECORDED_VIDEO
 VIDEO = False
+
+[IPWEBCAM]
+PORT = 5555
+IPWEBCAM = True
