cleaned up settings.ini again...

--- a/settings.ini
+++ b/settings.ini
@@ -7,13 +7,12 @@ MULTIPLE_DEVICES = False
 CAMERA_SOURCE = 0
 
 [DeepLabCut]
-DLC_PATH = D:\PycharmProjects\DeepLabCut\deeplabcut
-MODEL = Mouse_resident_intruder_HomeCage_CLAHE
+DLC_PATH = DLC_PATH
+MODEL = MODEL_NAME
 
 [Experiment]
-EXP_NAME = FirstExperiment
-EXP_ORIGIN = uguh
-;EXP_NAME = CONFIG_NAME
+EXP_ORIGIN = CUSTOM/BASE
+EXP_NAME = CONFIG_NAME
 RECORD_EXP = True
 
 [Video]
