updating model options

--- a/settings.ini
+++ b/settings.ini
@@ -4,21 +4,20 @@ FRAMERATE = 30
 STREAMS = color, depth, infrared
 OUTPUT_DIRECTORY = /Output
 MULTIPLE_DEVICES = False
-CAMERA_SOURCE = 0
+CAMERA_SOURCE = 2
 
-[DeepLabCut]
-DLC_PATH = DLC_PATH
-MODEL = MODEL_NAME
+[Pose Estimation]
+MODEL_ORIGIN = DLC
+MODEL_PATH = MODEL_PATH
+MODEL_NAME = MODEL
+; only used in DLC-LIVE for now
+ALL_BODYPARTS = bp1, bp2, bp3, bp4
 
 [Experiment]
-EXP_ORIGIN = CUSTOM/BASE
+EXP_ORIGIN = BASE/CUSTOM
 EXP_NAME = CONFIG_NAME
 RECORD_EXP = True
 
 [Video]
 VIDEO_SOURCE = PATH_TO_PRERECORDED_VIDEO
 VIDEO = False
-
-[IPWEBCAM]
-PORT = 5555
-IPWEBCAM = True
