updating model options

--- a/experiments/configs/default_config.ini
+++ b/experiments/configs/default_config.ini
@@ -102,7 +102,7 @@ STIMULATION = BaseStimulation
 TYPE = NI
 ;only used in RASP_NETWORK
 IP = None
-;Port from DAQ, PIN from Raspberry
+;PORT parameter is used for all (Port from DAQ, PIN from Raspberry, or serial port from Arduino)
 PORT = Dev1/PFI6
 STIM_TIME = 3.5
 
@@ -111,7 +111,7 @@ STIM_TIME = 3.5
 TYPE = NI
 ;only used in RASP_NETWORK
 IP = None
-;Port from DAQ, PIN from Raspberry or USB PORT for ARDUINO
+;PORT parameter is used for all (Port from DAQ, PIN from Raspberry, or serial port from Arduino)
 STIM_PORT = Dev1/PFI6
 REMOVAL_PORT = Dev1/PFI5
 STIM_TIME = 3.5
