--- a/experiments/configs/default_config.ini
+++ b/experiments/configs/default_config.ini
@@ -98,12 +98,20 @@ STIMULATION = BaseStimulation
 ;[STIMULATION]
 
 [BaseStimulation]
+; can be NI, RASPBERRY or RASP_NETWORK
 TYPE = NI
+;only used in RASP_NETWORK
+IP = None
+;PORT parameter is used for all (Port from DAQ, PIN from Raspberry, or serial port from Arduino)
 PORT = Dev1/PFI6
 STIM_TIME = 3.5
 
 [RewardDispenser]
+; can be NI, RASPBERRY, RASP_NETWORK or ARDUINO
 TYPE = NI
+;only used in RASP_NETWORK
+IP = None
+;PORT parameter is used for all (Port from DAQ, PIN from Raspberry, or serial port from Arduino)
 STIM_PORT = Dev1/PFI6
 REMOVAL_PORT = Dev1/PFI5
 STIM_TIME = 3.5
