updated settings.ini for easier reading moved advanced settings to /utils

--- a/settings.ini
+++ b/settings.ini
@@ -1,24 +1,29 @@
 [Streaming]
-RESOLUTION = 320, 256
+RESOLUTION = 848, 480
 FRAMERATE = 30
-STREAMS = color, depth, infrared
 OUTPUT_DIRECTORY = /Output
-MULTIPLE_DEVICES = False
+#if you have connected multiple cameras (USB), you will need to select the number OpenCV has given them.
+#Default is "0", which takes the first available camera.
 CAMERA_SOURCE = 0
+#you can use camera, ipwebcam or video to select your input source
+STREAMING_SOURCE = camera
 
 [DeepLabCut]
 DLC_PATH = DLC_PATH
 MODEL = MODEL_NAME
 
 [Experiment]
-EXP_ORIGIN = CUSTOM/BASE
+#Available parameters are "CUSTOM" and "BASE"
+EXP_ORIGIN = BASE
+#Name of the experiment config in /experiments/configs or name of the custom experiment in /experiments/custom/experiments.py
 EXP_NAME = CONFIG_NAME
+#if you want the experiment to be recorded as a raw video set this to "True".
 RECORD_EXP = True
 
 [Video]
+#Full path to video that you want to use as input. Needs "STREAMING_SOURCE" set to "video"!
 VIDEO_SOURCE = PATH_TO_PRERECORDED_VIDEO
-VIDEO = False
 
 [IPWEBCAM]
+#Standard Port is 5555 if you followed the SmoothStream setup
 PORT = 5555
-IPWEBCAM = True
