preparing settings for model merge updated naming in experiments.py small changes to reporting of classifier.py

--- a/settings.ini
+++ b/settings.ini
@@ -8,9 +8,13 @@ CAMERA_SOURCE = 0
 #you can use "camera", "ipwebcam" or "video" to select your input source
 STREAMING_SOURCE = video
 
-[DeepLabCut]
-DLC_PATH = DLC_PATH
-MODEL = MODEL_NAME
+[Pose Estimation]
+#possible origins are: DLC
+MODEL_ORIGIN = ORIGIN
+MODEL_PATH = PATH_TO_MODEL
+MODEL_NAME = MODEL_NAME
+; Currently used to translate pose estimation into postures with bodypart names ... not necessary for classic DLC networks
+ALL_BODYPARTS = bp1, bp2, bp3, bp4
 
 [Experiment]
 #Available parameters are "CUSTOM" and "BASE"
@@ -22,13 +26,14 @@ RECORD_EXP = True
 
 [Classification]
 PATH_TO_CLASSIFIER = CLASSIFIER_PATH
-ALL_BODYPARTS = Ear_left_1, Ear_right_1, Nose_1,Center_1, Lateral_left_1, Lateral_right_1, Tail_base_1, Ear_left_2,Ear_right_2, Nose_2, Center_2, Lateral_left_2, Lateral_right_2, Tail_base_2
 #time window used for feature extraction (currently only works with 15)
 TIME_WINDOW = 15
 #number of parallel classifiers to run, this is dependent on your performance time. You need at least 1 more classifier then your average classification time.
 POOL_SIZE = 4
-#threshold to accept a classification probability as positive detection
+#threshold to accept a classification probability as positive detection (SIMBA + )
 THRESHOLD = 0.5
+# class/category of identified behavior to use as trigger (only used for B-SOID)
+TRIGGER = 5
 #feature extraction currently works with millimeter not px, so be sure to enter the factor (as in simba).
 PIXPERMM = 6.132
 
