Cleaned up the imports

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-gpiozero
-pigpio
-pyserial
-nidaqmx>=0.5.7
-click>=7.0
-opencv-python>=3.4.5.20
+gpiozero==1.5.1
+pigpio==1.78
+pyserial==3.5
+nidaqmx==0.5.7
+click==7.1.2
+opencv-python==3.4.5.20
+opencv-contrib-python==4.4.0.46
 numpy>=1.14.5
-pandas>=0.21.0
-matplotlib>=3.0.3
-scikit-image>=0.14.2
-scipy>=1.1.0
+pandas==1.1.4
+matplotlib==3.0.3
+scikit-image==0.17.2
+scipy==1.5.4
+pyzmq==20.0.0
