fixed example experiment stimulus_process.py to work out of the box

--- a/settings.ini
+++ b/settings.ini
@@ -1,18 +1,25 @@
 [Streaming]
-RESOLUTION = 1920, 1080
+#RESOLUTION = 600, 1024
+#RESOLUTION = 960, 540
+#RESOLUTION = 192, 192
+RESOLUTION = 1024, 1024
 FRAMERATE = 30
-OUTPUT_DIRECTORY = /Output
+OUTPUT_DIRECTORY = D:/Output
 #if you have connected multiple cameras (USB), you will need to select the number OpenCV has given them.
 #Default is "0", which takes the first available camera.
 CAMERA_SOURCE = 0
-#you can use "camera", "ipwebcam" or "video" to select your input source
+#you can use camera, ipwebcam or video to select your input source
 STREAMING_SOURCE = video
 
 [Pose Estimation]
-#possible origins are: DLC, DLC-LIVE, MADLC, DEEPPOSEKIT
-MODEL_ORIGIN = ORIGIN
-MODEL_PATH = PATH_TO_MODEL
-MODEL_NAME = MODEL_NAME
+#possible origins are: DLC, DLC-LIVE, MADLC, DEEPPOSEKIT, SLEAP
+MODEL_ORIGIN = SLEAP
+MODEL_PATH = D:\SLEAP\models\baseline_model.centroids , D:\SLEAP\models\baseline_model.topdown
+#MODEL_PATH = D:\PycharmProjects\DeepLabCut\deeplabcut
+#MODEL_PATH = D:\DeepLabCutProjects\Optogen_Net-JensBlack-2020-04-02\exported-models\DLC_Optogen_Net_resnet_50_iteration-0_shuffle-1
+#MODEL_PATH = D:\DeepPoseKit\models\Fly\best_model_densenet.h5
+#MODEL_NAME = Mouse_resident_intruder_HomeCage_CLAHE
+MODEL_NAME = 8PointsSep22-trainset95shuffle1
 ; only used in DLC-LIVE and DeepPoseKit for now; if left empty or to short,  auto-naming will be enabled in style bp1, bp2 ...
 ALL_BODYPARTS = bp1, bp2, bp3, bp4
 
@@ -24,10 +31,26 @@ EXP_NAME = ExampleExperiment
 #if you want the experiment to be recorded as a raw video set this to "True".
 RECORD_EXP = True
 
+[Classification]
+PATH_TO_CLASSIFIER = D:\SimBa\Jens_models\anogenital_prediction_5.sav
+#time window used for feature extraction (currently only works with 15)
+TIME_WINDOW = 15
+#number of parallel classifiers to run, this is dependent on your performance time. You need at least 1 more classifier then your average classification time.
+POOL_SIZE = 4
+#threshold to accept a classification probability as positive detection (SIMBA + )
+THRESHOLD = 0.5
+# class/category of identified behavior to use as trigger (only used for B-SOID)
+TRIGGER = 5
+#feature extraction currently works with millimeter not px, so be sure to enter the factor (as in simba).
+PIXPERMM = 3.651
+#PIXPERMM = 6.132
+
 [Video]
 #Full path to video that you want to use as input. Needs "STREAMING_SOURCE" set to "video"!
-VIDEO_SOURCE = PATH_TO_VIDEO
-
+#VIDEO_SOURCE = D:\SimBa\Video17.mp4
+#VIDEO_SOURCE = D:\SimBa\Videos_2\2019-08-26_Tr1_SDV_0808_trim.mp4
+#VIDEO_SOURE = D:\DeepPoseKit\Videos\Video_1_896.mp4
+VIDEO_SOURCE = D:\SLEAP\test_clip.15s.mp4
 [IPWEBCAM]
 #Standard Port is 5555 if you followed the SmoothStream setup
 PORT = 5555
