new cropping feature for color stream new flatten feature for multiple animal estimation

--- a/utils/advanced_settings.ini
+++ b/utils/advanced_settings.ini
@@ -4,7 +4,14 @@
 STREAMS = color, depth, infrared
 MULTIPLE_DEVICES = False
 STACK_FRAMES = False
-ANIMALS_NUMBER = 1
+ANIMALS_NUMBER = 2
+#todo: add crop functionality
+CROP = False
+CROP_X = 512, 1024
+CROP_Y = 512, 1024
+
+[Pose Estimation]
+FLATTEN_MA = True
 
 [Video]
 REPEAT_VIDEO = True
