integrated CROP and REPEAT_VIDEO option in advanced_settings

--- a/settings.ini
+++ b/settings.ini
@@ -5,7 +5,7 @@ OUTPUT_DIRECTORY = /Output
 #if you have connected multiple cameras (USB), you will need to select the number OpenCV has given them.
 #Default is "0", which takes the first available camera.
 CAMERA_SOURCE = 0
-#you can use "camera", "ipwebcam" or "video" to select your input source
+#you can use camera, ipwebcam or video to select your input source
 STREAMING_SOURCE = video
 
 [Pose Estimation]
