fixed default settings

--- a/utils/advanced_settings.ini
+++ b/utils/advanced_settings.ini
@@ -4,14 +4,14 @@
 STREAMS = color, depth, infrared
 MULTIPLE_DEVICES = False
 STACK_FRAMES = False
-ANIMALS_NUMBER = 2
+ANIMALS_NUMBER = 1
 
 CROP = False
 CROP_X = 0, 50
 CROP_Y = 0, 50
 
 [Pose Estimation]
-FLATTEN_MA = False
+FLATTEN_MA = True
 
 [Video]
 REPEAT_VIDEO = True
