updated handling missing data functionality

--- a/utils/advanced_settings.ini
+++ b/utils/advanced_settings.ini
@@ -11,8 +11,8 @@ CROP_X = 0, 50
 CROP_Y = 0, 50
 
 [Pose Estimation]
-FLATTEN_MA = True
-HANDLE_MISSING = skip
+FLATTEN_MA = False
+HANDLE_MISSING = null
 
 [Video]
 REPEAT_VIDEO = True
