Made writing of data output continuous

--- a/settings.ini
+++ b/settings.ini
@@ -8,6 +8,9 @@ CAMERA_SOURCE = 0
 #you can use "camera", "ipwebcam" or "video" to select your input source
 STREAMING_SOURCE = video
 
+[Data Output]
+CSV_DELIMITER = ;
+
 [Pose Estimation]
 #possible origins are: DLC, DLC-LIVE, MADLC, DEEPPOSEKIT
 MODEL_ORIGIN = ORIGIN
