--- a/settings.ini
+++ b/settings.ini
@@ -9,8 +9,10 @@ CAMERA_SOURCE = 0
 STREAMING_SOURCE = video
 
 [Pose Estimation]
-#possible origins are: DLC, DLC-LIVE, MADLC, DEEPPOSEKIT
+#possible origins are: SLEAP, DLC, DLC-LIVE,MADLC, DEEPPOSEKIT
 MODEL_ORIGIN = ORIGIN
+#takes path to model or models (in case of SLEAP topdown, bottom up) in style "string" or "string , string", without ""
+# E.g.: MODEL_PATH = D:\SLEAP\models\baseline_model.centroids , D:\SLEAP\models\baseline_model.topdown
 MODEL_PATH = PATH_TO_MODEL
 MODEL_NAME = MODEL_NAME
 ; only used in DLC-LIVE and DeepPoseKit for now; if left empty or to short,  auto-naming will be enabled in style bp1, bp2 ...
