--- a/utils/advanced_settings.ini
+++ b/utils/advanced_settings.ini
@@ -4,14 +4,14 @@
 STREAMS = color, depth, infrared
 MULTIPLE_DEVICES = False
 STACK_FRAMES = False
-ANIMALS_NUMBER = 1
+ANIMALS_NUMBER = 2
 
 CROP = False
 CROP_X = 0, 50
 CROP_Y = 0, 50
 
 [Pose Estimation]
-FLATTEN_MA = True
+FLATTEN_MA = FALSE
 HANDLE_MISSING = skip
 
 [Video]
