added PASS_SEPARATE Parameter to advanced_settings.ini

--- a/utils/advanced_settings.ini
+++ b/utils/advanced_settings.ini
@@ -4,11 +4,12 @@
 STREAMS = color, depth, infrared
 MULTIPLE_DEVICES = False
 STACK_FRAMES = False
+PASS_SEPARATE = False
 ANIMALS_NUMBER = 1
 
 CROP = False
-CROP_X = 0, 50
-CROP_Y = 0, 50
+CROP_X = 0, 20
+CROP_Y = 0, 20
 
 [Pose Estimation]
 FLATTEN_MA = FALSE
