--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 PySide2==5.14.1
-numba
+numba==0.51.1
 gpiozero==1.5.1
 pigpio==1.78
 pyserial==3.5
@@ -9,5 +9,7 @@ opencv-python==3.4.5.20
 opencv-contrib-python==4.4.0.46
 numpy>=1.14.5
 pandas==1.1.4
+scikit-learn== 0.24.1
 scikit-image==0.17.2
 scipy==1.4.1
+pure-predict==0.0.4
