updated Readme.md, convert_classifier.py, settings.ini to match new release

--- a/settings.ini
+++ b/settings.ini
@@ -1,20 +1,20 @@
 [Streaming]
-RESOLUTION = 1920, 1080
+RESOLUTION = 960, 540
 FRAMERATE = 30
 OUTPUT_DIRECTORY = /Output
 #if you have connected multiple cameras (USB), you will need to select the number OpenCV has given them.
 #Default is "0", which takes the first available camera.
 CAMERA_SOURCE = 0
 #you can use "camera", "ipwebcam" or "video" to select your input source
-STREAMING_SOURCE = video
+STREAMING_SOURCE = camera
 
 [Pose Estimation]
 #possible origins are: SLEAP, DLC, DLC-LIVE,MADLC, DEEPPOSEKIT
-MODEL_ORIGIN = ORIGIN
+MODEL_ORIGIN = MODEL_ORIGIN
 #takes path to model or models (in case of SLEAP topdown, bottom up) in style "string" or "string , string", without ""
 # E.g.: MODEL_PATH = D:\SLEAP\models\baseline_model.centroids , D:\SLEAP\models\baseline_model.topdown
 MODEL_PATH = PATH_TO_MODEL
-MODEL_NAME = MODEL_NAME
+MODEL_NAME = NAME_OF_MODEL
 ; only used in DLC-LIVE and DeepPoseKit for now; if left empty or to short,  auto-naming will be enabled in style bp1, bp2 ...
 ALL_BODYPARTS = bp1, bp2, bp3, bp4
 
@@ -27,17 +27,17 @@ EXP_NAME = ExampleExperiment
 RECORD_EXP = True
 
 [Classification]
-PATH_TO_CLASSIFIER = CLASSIFIER_PATH
+PATH_TO_CLASSIFIER = PATH_TO_CLASSIFIER
 #time window used for feature extraction (currently only works with 15)
 TIME_WINDOW = 15
 #number of parallel classifiers to run, this is dependent on your performance time. You need at least 1 more classifier then your average classification time.
-POOL_SIZE = 4
+POOL_SIZE = 1
 #threshold to accept a classification probability as positive detection (SIMBA + )
-THRESHOLD = 0.5
+THRESHOLD = 0.9
 # class/category of identified behavior to use as trigger (only used for B-SOID)
-TRIGGER = 5
+TRIGGER = NUMBER_OF_CLUSTER
 #feature extraction currently works with millimeter not px, so be sure to enter the factor (as in simba).
-PIXPERMM = 6.132
+PIXPERMM = 1
 
 [Video]
 #Full path to video that you want to use as input. Needs "STREAMING_SOURCE" set to "video"!
