new filter by likelihood function for original DLC pose estimation preparing deprecation of dlstream find_new_peaks

--- a/utils/advanced_settings.ini
+++ b/utils/advanced_settings.ini
@@ -8,13 +8,20 @@ PASS_SEPARATE = False
 ANIMALS_NUMBER = 1
 
 CROP = False
-CROP_X = 0, 20
-CROP_Y = 0, 20
+CROP_X = 0, 1280
+CROP_Y = 0, 500
 
 [Pose Estimation]
 FLATTEN_MA = FALSE
 SPLIT_MA = FALSE
-HANDLE_MISSING = skip
+HANDLE_MISSING = pass
+
+# These settings work in synergy with HANDLE_MISSING (currently only for DLC)
+FILTER_LIKELIHOOD = True
+# Likelihood value to filter pose estimation by used in DLC. Filtered values will be set to NaN, NaN.
+LIKELIHOOD_THRESHOLD = 0.9
+# this is a legacy option for original DLSTREAM & DLC interaction and will soon be deprecated.
+USE_DLSTREAM_POSTURE_DETECTION = FALSE
 
 [Video]
 REPEAT_VIDEO = True
