fixed default value for TRIGGER

--- a/settings.ini
+++ b/settings.ini
@@ -1,7 +1,8 @@
 [Streaming]
 RESOLUTION = 960, 540
 FRAMERATE = 30
-OUTPUT_DIRECTORY = /Output
+#put in the path to your outputfolder
+OUTPUT_DIRECTORY = C:/Output
 #if you have connected multiple cameras (USB), you will need to select the number OpenCV has given them.
 #Default is "0", which takes the first available camera.
 CAMERA_SOURCE = 0
@@ -35,7 +36,7 @@ POOL_SIZE = 1
 #threshold to accept a classification probability as positive detection (SIMBA + )
 THRESHOLD = 0.9
 # class/category of identified behavior to use as trigger (only used for B-SOID)
-TRIGGER = NUMBER_OF_CLUSTER
+TRIGGER = 0
 #feature extraction currently works with millimeter not px, so be sure to enter the factor (as in simba).
 PIXPERMM = 1
 
