--- a/utils/advanced_settings.ini
+++ b/utils/advanced_settings.ini
@@ -14,7 +14,10 @@ CROP_Y = 0, 500
 [Pose Estimation]
 FLATTEN_MA = FALSE
 SPLIT_MA = FALSE
-HANDLE_MISSING = pass
+#handle missing will handle missing/NaN values. E.g., when using DLC pose estimation with likelihood filter.
+#Handle with care: NaN values might result in unexpected behavior during experiments and when triggers are calculated!
+#default is "skip", for SIMBA use "null", for BSOID use "pass", "reset" will set all values to NaN for the entire skeleton
+HANDLE_MISSING = skip
 
 # These settings work in synergy with HANDLE_MISSING (currently only for DLC)
 FILTER_LIKELIHOOD = True
